k8s/gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
spec:
  selector:
    app: gateway-service
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
